@@ -1,3 +1,8 @@
+2006-09-03  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/irc-network-editor.c:
+	  - Fix ordering of autojoin channels with keys. Bug #346987.
+
 2006-09-01  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/fe-gnome/fe-gnome.c: (fe_open_url):
